assets/style.css
/* ... */
header .hero .main-title {
    flex: 0 0 100%;
    padding-top: 5rem;
    padding-bottom: 3.5rem;
}

header .hero .hero-text {
    flex: 0 0 30%;
}

header .hero img {
    flex: 0 0 70%;
    min-width: 0;
    margin-bottom: -10vh;
}

.hero-text button {
    margin: 2rem 0;
}    

.hero-text i {
font-size: 3rem;    
font-weight: 800;
margin-top: 3rem;
}


/* SECTION 1 - TROVA IL PIANO CHE FA PER TE */

.plans {
    padding-top: 9rem;
}

h2 {
    font-size: 2.5rem;
    font-weight: 700;
    margin-bottom: 3.5rem;
}

.plans form {
    margin-bottom: 3.5rem;
}

.plans label {
    margin-right: 2.5rem;
    line-height: 1.5rem;
    vertical-align: middle;
}

.plans .radio {
    appearance: none;
    background-color: #fff;
    padding: .35rem .35rem;
    color: var(--dropbox-blue);
    border: 0.35rem solid var(--dropbox-blue);
    border-radius: 50%;
    line-height: 1.5rem;
    vertical-align: middle;
}

.plans .cards-container {
    display: flex;
    flex-wrap: wrap;
    gap: var(--card-gap);
    font-size: 0.9em;
}

.plans .card {
    width: calc((100% - 2 * var(--card-gap)) / 3);
    border: 1px solid #d0d0d0;
}

.plans .card .user-type {
    padding: 0.3rem 0;
    text-align: center;
    border-bottom: 1px solid #d0d0d0;
}

.plans .card .user-features {
    padding: 0 2rem;
}

.plans .card .category {
    font-size: 1.5rem;
    margin-top: 1.5rem;
}

.plans .card .price {
    margin-top: 1rem;
}

.plans .card .time {
    margin-top: 0.4rem;
    margin-bottom: 3rem;
    color: #666666;
}

.plans .card .user-number,
.plans .card .space-amount,
.plans .card .description,
.plans .card .feature {
    display: flex;
    align-items: flex-start;
    gap: .5rem;
}

.plans .list i {
    padding-top: .3em;
}

.plans .list .feature i {
    padding-top: .3em;
    color: var(--dropbox-blue);
}

.plans .card .user-number,
.plans .card .space-amount,
.plans .card .feature {
    margin-bottom: 1.5rem;
}

.plans .card .description,
.plans .card .buy-now {
    margin-bottom: 3rem;
}

.plans .card button {
    display: block;
    width: 100%;
    margin-bottom: 2rem;
}

.plans .card button > a {
    text-decoration: none;
    color: #ffffff;
    font-size: inherit;
}

.plans .card a {
    text-decoration: underline;
    color: blue;
    font-size: inherit;
}

.plans .card .short-line {
    border: 1px solid #d0d0d0;
    margin-right: 50%;
    margin-bottom: 3rem;
}

.plans .card .plan-type {
    margin-bottom: 2rem;
}

.plans .card.full-width {
    flex: 1 0 100%;
}

.plans .horizontal {
    display: flex;
    padding: 0 2rem;
    justify-content: space-between;
    align-items: flex-start;
}

.plans .horizontal .enterprise {
    flex: 0 0 70%;
}

.plans .horizontal .cta {
    margin-top: 1.5rem;
    flex: 0 0 calc(30% - var(--card-gap));
}

.plans .horizontal .price {
    margin-bottom: 3rem;
}

.plans .horizontal .enterprise {
    margin-bottom: 1.5rem;
}



/* SECTION 2 - ENTRA IN CONTATTO CON UN PARTNER */


section .partner-container {
    margin-top: 9rem;
    display: flex;
    align-items: flex-start;
    gap: calc(2 * var(--card-gap));
}

.partner-container img {
    min-width: 0;
    flex: 0 0 60%;
}

.partner-container .partner-text {
    flex: 0 0 calc(40% - 2 * var(--card-gap));
}

.partner-container h3 {
    font-size: 1.5rem;
    margin-top: 3rem;
    margin-bottom: 1rem;
}

.partner-container p {
    margin-bottom: 2rem;
}


/* SECTION 3 - ESEGUI PIÙ OPERAZIONI CON DROPBOX BUSINESS */

section.multitask {
    margin-top: 9rem;
    margin-bottom: 3rem;
}

.multitask .cards-container {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    gap: var(--card-gap);
}

.multitask .card {
    flex: 0 0 calc((100% - 2 * var(--card-gap)) / 3);
}

.multitask img {
    width: 100%;
}

.multitask h3 {
    font-size: 1.5rem;
    margin-bottom: 2rem;
}



/* SECTION 4 - CLIENTS */

section.clients {
    margin-top: 9rem;
    margin-bottom: 3rem;
    --designit-dark: #a2d39b;
    --designit-light: #d1e9cd;
    --designit: #f5f5f5;
    --asu-dark: #61082b;
    --asu-light: #aa6677;
    --uf-dark: #0093ce;
    --uf-light: #afddff;
    --topps-dark: #ff1c1c;
    --topps-light: #ff8d8d;
    --bicycle-dark: #d5001f;
    --bicycle-light: #fd6c81;
    --hearst-dark: #b4d0e7;
    --hearst-light: #e3f2fe;
    --planet-dark: #0d2481;
    --planet-light: #5588cc;
    --clear-dark: #ffd830;
    --clear-light:#ffeebb;
}

.clients .text-content {
    padding-inline: 0 15%;
}

.clients .text-content .title {
    font-size: 2.5rem;
    margin-bottom: 3.5rem;
    text-align: left;
}

.clients .text-content a {
    text-decoration: underline;
    color: blue;
}

.clients .container {
    display: flex;
    flex-wrap: wrap;
}

.clients .squares-container-normal {
    margin-top: 9rem;
    width: calc(100% / 3);
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
}

.clients .squares-container-large {
    margin-top: 9rem;
    width: calc(100% / 3);
    display: flex;
    align-items: flex-start;
}

.clients .square {
    flex: 0 0 50%;
    aspect-ratio: 1 / 1;
}

.clients .square-large {
    flex: 0 0 100%;
    aspect-ratio: 1 / 1;
    overflow-y: scroll;
}


/* square Designit small */
.clients .container .designit {
    background-color: var(--designit-dark);
    position: relative;
    border: 1.1rem solid var(--designit-dark);
    border-color: var(--designit-dark);
    transition: 200ms border-color ease-in-out;
}

.clients .container .designit > img {
    filter: invert(100%);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0.35);
}

.clients .container .designit:hover {
    border: 1.1rem solid var(--designit-light);
}

/* square Arizona State University */
.clients .container .asu {
    background-color: var(--asu-dark);
    position: relative;
    border: 1.1rem solid var(--asu-dark);
    border-color: var(--asu-dark);
    transition: 200ms border-color ease-in-out;
}
/* ... */

